Added a 'splash' screen, updated instructions, and added scoring to losses